# src/main/java/br/com/consultorio/domain/entities/Patient.java
@@ -1,25 +1,26 @@
 package br.com.consultorio.domain.entities;
 
-import br.com.consultorio.domain.enums.EmployeeType;
 import jakarta.persistence.Column;
+import jakarta.persistence.Embedded;
 import jakarta.persistence.Entity;
-import jakarta.persistence.EnumType;
-import jakarta.persistence.Enumerated;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
 import jakarta.persistence.Table;
 import java.time.LocalDateTime;
+import lombok.Builder;
 import lombok.Getter;
 import lombok.Setter;
 import org.hibernate.annotations.CreationTimestamp;
 import org.hibernate.annotations.UpdateTimestamp;
 
+@Table(name = "patients")
 @Entity
-@Table(name = "employees")
+@Builder
 @Getter
 @Setter
-public class Employee {
+public class Patient {
+
   @Id
   @GeneratedValue(strategy = GenerationType.IDENTITY)
   private Long id;
@@ -27,21 +28,17 @@ public class Employee {
   @Column(name = "name", nullable = false, length = 150)
   private String name;
 
-  @Enumerated(EnumType.STRING)
-  @Column(name = "employee_type", nullable = false)
-  private EmployeeType employeeType;
-
   @Column(name = "cpf", nullable = false, unique = true, length = 11)
   private String cpf;
 
-  @Column(name = "password", nullable = false, length = 255)
-  private String password;
+  @Column(name = "phone", nullable = false, length = 20)
+  private String phone;
 
-  @CreationTimestamp
-  @Column(name = "created_at", updatable = false)
-  private LocalDateTime createdAt;
+  @Embedded private Address address;
 
-  @UpdateTimestamp
-  @Column(name = "updated_at")
-  private LocalDateTime updatedAt;
+  @Embedded private EmergencyContact emergencyContact;
+
+  @CreationTimestamp private LocalDateTime createdAt;
+
+  @UpdateTimestamp private LocalDateTime updatedAt;
 }
